--- a/.env
+++ b/.env
@@ -1,3 +1,5 @@
 PORT=3000
 EMAIL_USER=aaryan@divyajyotschool.org
 EMAIL_PASS=123
+MONGO_URL=mongodb://localhost:27017/complaints
+JWT_SECRET=yourStrongSecretKey
